# pyxflow

./: .gitignore  .mcp.json  BRAND.md  BUNDLE.md  CLAUDE.md  EXPO-PLAN.md  LICENSE  README-DEV.md  README.md  RELEASE.md  STATUS.API.md  STATUS.md  pyproject.toml  run.py
bundle/: index.html  index.html.br  sw.js  sw.js.br
demo/: README.md  __init__.py  __main__.py  main_layout.py
demo/services/: __init__.py  people_service.py  sample_person_service.py  sample_persons.csv
demo/styles/: styles.css
demo/views/: about.py  about_view.py  components.py  components_demo.py  components_view.py  crud.py  crud_view.py  dialog.py  dialog_demo_view.py  file_explorer.py  file_explorer_view.py  greet.py  greet_view.py  grid.py  grid_demo.py  grid_view.py  hello_view.py  hello_world.py  main_layout.py  master_detail.py  master_detail_view.py  people.csv  push_demo.py  push_demo_view.py  test_binder.py  test_buttons_icons.py  test_card_scroller.py  test_checkbox_radio.py  test_client_callable.py  test_combo_box.py  test_component_api.py  test_custom_field.py  test_date_time.py  test_dialog.py  test_display.py  test_field_mixins.py  test_grid_basic.py  test_grid_features.py  test_html_elements.py  test_layouts.py  (+14 more)
docs/: CLAUDE.md  INDEX.md  README.md  SPECS.md  index.html
docs/mcp/: components.json  index.json  primer.md
docs/v-learn/: v-learn-speaker.html  v-learn.html
examples/: __init__.py  about.py  components_demo.py  dialog_demo.py  greet.py  grid_demo.py  hello_world.py  main_layout.py  people.csv
presentation/: PLAN.md  README.md  REBUILD.md  SPECS.md  index.html  record_gifs.py
presentation/references/: arun-gupta-sdd.md  dan-north-bssn.md  marcus-hellberg-fullstack-java.md  marcus-hellberg-fullstack.md  tiobe-feb-2026.md
presentation/specs/: java-layers.md  platform-explorer.html  platform-subsystems.md  python-layers.md
scripts/: __main__.py  build_mcp_content.py
src/pyflow/: __init__.py  app.py  bundle_generator.py  menu.py  router.py
src/pyxflow/: __init__.py  app.py  bundle_generator.py  main.py  menu.py  router.py
src/vaadin/: __init__.py
tests/: __main__.py  conftest.py  test_accordion.py  test_advanced_routing.py  test_api_gaps.py  test_api_gaps_batch2.py  test_avatar.py  test_binder.py  test_binder_dirty.py  test_bundle_discovery.py  test_bundle_generator.py  test_card.py  test_checkbox.py  test_client_callable.py  test_color_scheme.py  test_combo_box.py  test_component_features.py  test_component_features_advanced.py  test_components_core.py  test_custom_field.py  test_date_picker.py  test_date_time_picker.py  test_details.py  test_dialog.py  test_events.py  test_form_layout.py  test_grid.py  test_grid_renderers.py  test_http_server.py  test_icon.py  test_init_request.py  test_input_fields.py  test_integration.py  test_list_box.py  test_login.py  test_markdown.py  test_master_detail_layout.py  test_menu_bar.py  test_message_input.py  test_mixins.py  (+20 more)
tests/ui/: SPECS.md  check_spec_coverage.py  conftest.py  test_01_buttons_icons.py  test_02_text_inputs.py  test_03_number_inputs.py  test_04_checkbox_radio.py  test_05_select_listbox.py  test_06_combo_box.py  test_07_date_time.py  test_08_grid_basic.py  test_09_grid_features.py  test_10_tree_grid.py  test_11_dialog.py  test_12_notification_popover.py  test_13_tabs_accordion.py  test_14_menu.py  test_15_layouts.py  test_16_card_scroller.py  test_17_upload.py  test_18_display.py  test_19_html_elements.py  test_20_component_api.py  test_21_field_mixins.py  test_22_binder.py  test_23_navigation.py  test_24_push.py  test_25_theme.py  test_26_client_callable.py  test_27_custom_field.py  test_28_virtual_list.py  test_29_login.py  test_30_server_errors.py  test_31_route_params.py  test_32_mdl_nav.py  test_33_grid_editor.py  test_34_before_enter_js.py
tests/unit/: __init__.py  conftest.py  test_accordion.py  test_advanced_routing.py  test_api_gaps.py  test_api_gaps_batch2.py  test_api_gaps_batch3.py  test_app_layout.py  test_avatar.py  test_binder.py  test_binder_dirty.py  test_bundle_discovery.py  test_bundle_generator.py  test_bundle_workflow.py  test_card.py  test_checkbox.py  test_cli_setup.py  test_client_callable.py  test_color_scheme.py  test_combo_box.py  test_component_features.py  (+68 more)
worker/: package-lock.json  package.json  wrangler.toml
(+426 files in other folders)
