[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyflow"
version = "0.2.0"
description = "Python implementation of Vaadin Flow"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Vaadin", email = "info@vaadin.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: AsyncIO",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "aiohttp>=3.9.0",
    "watchfiles>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "playwright",
    "pytest-playwright",
    "Pillow",
    "pyyaml",
]

[project.scripts]
pyflow = "pyflow.app:main"
vaadin = "pyflow.app:main_deprecated"

[project.urls]
Homepage = "https://github.com/manolo/vaadin-pyflow"
Documentation = "https://vaadin.com/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/pyflow"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/unit"]
# UI tests require a browser and a running server; run them explicitly:
#   pytest tests/ui/ --headed
