[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyxflow"
version = "0.4.6"
description = "Python implementation of Vaadin Flow"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Vaadin", email = "info@vaadin.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: AsyncIO",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "aiohttp>=3.9.0",
    "watchfiles>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "playwright",
    "pytest-playwright",
    "Pillow",
    "pyyaml",
]

[project.scripts]
pyxflow = "pyxflow.app:main"
vaadin = "pyxflow.app:main_deprecated"

[project.urls]
Homepage = "https://github.com/manolo/pyxflow"
Documentation = "https://vaadin.com/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/pyxflow"]

[tool.hatch.build.targets.sdist]
include = ["src/", "/README.md", "/LICENSE", "/pyproject.toml"]

[tool.pyxflow]
vaadin-version = "25.1.0-beta1"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/unit"]
# UI tests require a browser and a running server; run them explicitly:
#   pytest tests/ui/ --headed
